--- a/sssv.eu.yaml
+++ b/sssv.eu.yaml
@@ -401,42 +401,43 @@ segments:
   - [0x6121E0, bin, rnc_6121E0] # 25247 => 25298
   - [0x618480, bin, rnc_618480] # 4183 => 4305
   ## matches US ROM from here..
-  - [0x6194E0, bin, rnc_6194E0] # 10338 => 31544
-  - [0x61BD50, bin, rnc_61BD50] # 4981 => 14344
-  - [0x61D0D0, bin, rnc_61D0D0] # 2753 => 9272
-  - [0x61DBA0, bin, rnc_61DBA0] # 2893 => 10000
-  - [0x61E6F0, bin, rnc_61E6F0] # 2881 => 8664
-  - [0x61F240, bin, rnc_61F240] # 2431 => 6824
-  - [0x61FBC0, bin, rnc_61FBC0] # 2802 => 8184
-  - [0x6206C0, bin, rnc_6206C0] # 3168 => 9432
-  - [0x621320, bin, rnc_621320] # 4976 => 14664
-  - [0x622690, bin, rnc_622690] # 5270 => 20992
-  - [0x623B30, bin, rnc_623B30] # 3373 => 10032
-  - [0x624860, bin, rnc_624860] # 1895 => 4864
-  - [0x624FD0, bin, rnc_624FD0] # 2399 => 6744
-  - [0x625930, bin, rnc_625930] # 2818 => 8104
-  - [0x626440, bin, rnc_626440] # 3478 => 10920
-  - [0x6271E0, bin, rnc_6271E0] # 3252 => 9784
-  - [0x627EA0, bin, rnc_627EA0] # 6051 => 18784
-  - [0x629650, bin, rnc_629650] # 2353 => 6224
-  - [0x629F90, bin, rnc_629F90] # 2200 => 5976
-  - [0x62A830, bin, rnc_62A830] # 2677 => 7960
-  - [0x62B2B0, bin, rnc_62B2B0] # 2727 => 8064
-  - [0x62BD60, bin, rnc_62BD60] # 2277 => 7096
-  - [0x62C650, bin, rnc_62C650] # 5064 => 14360
-  - [0x62DA20, bin, rnc_62DA20] # 1959 => 5424
-  - [0x62E1D0, bin, rnc_62E1D0] # 2419 => 6960
-  - [0x62EB50, bin, rnc_62EB50] # 2146 => 6112
-  - [0x62F3C0, bin, rnc_62F3C0] # 2610 => 7448
-  - [0x62FE00, bin, rnc_62FE00] # 2322 => 6904
-  - [0x630720, bin, rnc_630720] # 1964 => 5496
-  - [0x630ED0, bin, rnc_630ED0] # 3819 => 16288
-  - [0x631DC0, bin, rnc_631DC0] # 12695 => 40200
-  - [0x634F60, bin, rnc_634F60] # 98 => 1200
-  - [0x634FD0, bin, rnc_634FD0] # 11649 => 38088
-  - [0x637D60, bin, rnc_637D60] # 3076 => 8000
-  - [0x638970, bin, rnc_638970] # 69 => 120
-  - [0x6389C0, bin, rnc_6389C0] # 69 => 120
+  - [0x6194E0, bin, lang/lang1] # 10338 => 31544
+  - [0x61BD50, bin, lang/lang2] # 4981 => 14344
+  - [0x61D0D0, bin, lang/lang3] # 2753 => 9272
+  - [0x61DBA0, bin, lang/lang4] # 2893 => 10000
+  - [0x61E6F0, bin, lang/lang5] # 2881 => 8664
+  - [0x61F240, bin, lang/lang6] # 2431 => 6824
+  - [0x61FBC0, bin, lang/lang7] # 2802 => 8184
+  - [0x6206C0, bin, lang/lang8] # 3168 => 9432
+  - [0x621320, bin, lang/lang9] # 4976 => 14664
+  - [0x622690, bin, lang/lang10] # 5270 => 20992
+  - [0x623B30, bin, lang/lang11] # 3373 => 10032
+  - [0x624860, bin, lang/lang12] # 1895 => 4864
+  - [0x624FD0, bin, lang/lang13] # 2399 => 6744
+  - [0x625930, bin, lang/lang14] # 2818 => 8104
+  - [0x626440, bin, lang/lang15] # 3478 => 10920
+  - [0x6271E0, bin, lang/lang16] # 3252 => 9784
+  - [0x627EA0, bin, lang/lang17] # 6051 => 18784
+  - [0x629650, bin, lang/lang18] # 2353 => 6224
+  - [0x629F90, bin, lang/lang19] # 2200 => 5976
+  - [0x62A830, bin, lang/lang20] # 2677 => 7960
+  - [0x62B2B0, bin, lang/lang21] # 2727 => 8064
+  - [0x62BD60, bin, lang/lang22] # 2277 => 7096
+  - [0x62C650, bin, lang/lang23] # 5064 => 14360
+  - [0x62DA20, bin, lang/lang24] # 1959 => 5424
+  - [0x62E1D0, bin, lang/lang25] # 2419 => 6960
+  - [0x62EB50, bin, lang/lang26] # 2146 => 6112
+  - [0x62F3C0, bin, lang/lang27] # 2610 => 7448
+  - [0x62FE00, bin, lang/lang28] # 2322 => 6904
+  - [0x630720, bin, lang/lang29] # 1964 => 5496
+  - [0x630ED0, bin, lang/lang30] # 3819 => 16288
+  - [0x631DC0, bin, lang/lang31] # 12695 => 40200
+  - [0x634F60, bin, lang/lang32] # 98 => 1200
+  - [0x634FD0, bin, lang/lang33] # 11649 => 38088
+  - [0x637D60, bin, lang/lang34] # 3076 => 8000
+  - [0x638970, bin, lang/lang35] # 69 => 120
+  - [0x6389C0, bin, lang/lang36] # 69 => 120
+  # end of languages
   - [0x638A10, bin, rnc_638A10] # 5000 => 115024
   - type:  code
     name:  overlay1
