--- a/sssv.us.yaml
+++ b/sssv.us.yaml
@@ -43,7 +43,8 @@ segments:
     - [0xC2A0, c, main_C2A0]
     - [0xC330, c, core/eeprom]
     - [0xC770, c, main_C770]
-    - [0xC990, c, core/audio]
+    - [0xC990, c, core/audiomgr] # from ultra64demos
+    - [0xD2F0, c, core/audio]
     - [0xE3C0, c, core/audio2] # more audio
     - [0xF600, c, libultra/audio/csplayer]
     - [0x10CB0, c, main_10CB0]
@@ -237,7 +238,8 @@ segments:
     - [0x02FA70, bin] # tbd
     - [0x02FC00, .data, main_78F0]
     - [0x02FD28, .rodata, main_78F0]
-    - [0x02FD80, bin] # alignment?
+    - [0x02FD80, bin] #
+    # - [0x02FD80, .data, core/audiomgr] # .data for audiomgr
     - [0x02FDD0, bin] # audio lookups D_801546D0
     - [0x02FDE8, bin] # main_E3C0 rodata
     - [0x030860, bin] # CH.10 textures
@@ -266,6 +268,7 @@ segments:
     - [0x0380C0, bin] # data for ucode
     - [0x0390C0, bin] # F3DEX data
     - [0x039610, bin] #
+    - [0x398D0, .bss, core/audiomgr]
   - name: segment1 # in-game objects?
     type: code
     vram: 0x01000000
@@ -308,7 +311,7 @@ segments:
     - [0x03DDE0, bin]
     - [0x03DE70, bin]
     - [0x03DED0, bin]
-    - [0x03DF20, bin]
+    - [0x3DF20, .rodata, data/D_01004970_3DF20]
     - [0x3DF50, bin] # displaylist D_01004680_3DF50
     - [0x03DFB0, bin]
     - [0x03DFF0, bin]
@@ -507,7 +510,7 @@ segments:
     - [0x544a0, bin] # vtx
     - [0x54600, bin] # displaylist
     - [0x54650, bin] # vtx
-    - [0x548D0, bin] # displaylist
+    - [0x548D0, bin] # displaylist D_0101B000_548D0 - green ring
     - [0x54980, vtx, data/inc/D_0101B0B0_54980]
     - [0x54A00, vtx, data/inc/D_0101B130_54A00]
     - [0x54BE0, vtx, data/inc/D_0101B310_54BE0]
@@ -715,7 +718,7 @@ segments:
     - [0x89A60, bin] # vtx
     - [0x8A980, bin] # dl # white/blue capsule thing
     - [0x8AD00, bin] # vtx
-    - [0x8BFB0, bin] # displaylist # spaceship
+    - [0x8BFB0, bin] # displaylist # spaceship D_05002D50_8BFB0
     - [0x8C400, rgba16, img/intro/asteroid.rgba16, 32, 32]
     - [0x8CC00, bin] # vtx
     - [0x8D2D0, bin] # displaylist # asteroid
@@ -747,7 +750,7 @@ segments:
     - [0x93BF0, bin] # vtx
     - [0x940E0, bin] # displaylist # dog kennel
     - [0x94270, bin] # vtx
-    - [0x94390, bin] # displaylist # ?
+    - [0x94390, bin] # displaylist # D_050017A0 object 163
     - [0x943E0, bin] # vtx
     - [0x94610, bin] # displaylist # carrot
     - [0x94690, rgba16, img/levels/THE_BATTERY_FARM/chair.rgba16, 32, 32]
@@ -1249,7 +1252,8 @@ segments:
     - [0xC6AF0, vtx, data/inc/D_05002340_C6AF0]
     - [0xC6CE0, vtx, data/inc/D_05002530_C6CE0]
     - [0xC6E60, .data, data/C6E60] # desert 'claw' tree thing
-    - [0xC7170, bin]
+    - [0xC7170, bin] # vtx
+    - [0xC77A0, bin] # displaylist
     - [0xC7910, bin] # vtx # D_05003160
     - [0xC79A0, bin] # displaylist
   - name: data_C7A00
@@ -1399,7 +1403,10 @@ segments:
     - [0x0D0620, bin]
     - [0x0D0930, bin]
     - [0x0D1110, bin]
-    - [0x0D14D0, bin]
+    - [0xD14D0, vtx, data/inc/D_04009AA0_D14D0]
+    - [0xD1550, vtx, data/inc/D_04009B20_D1550]
+    - [0xD1640, vtx, data/inc/D_04009C10_D1640]
+    - [0xD17E0, .data, data/FAT_BEAR_MOUNTAIN_trophy.D_04009DB0_D17E0]
     - [0x0D1900, bin]
     - [0x0D2130, bin]
     - [0xD22A0, .data, data/D3070]
@@ -1844,9 +1851,9 @@ segments:
     - [0xFEE20, bin] # vtx
     - [0xFF090, bin] # dl
     - [0xFF140, bin] # vtx
-    - [0xFF3C0, bin] # dl # plant?
+    - [0xFF3C0, bin] # dl # plant? object id 171
     - [0xFF450, bin] # vtx
-    - [0xFF750, bin] # dl # flame torch base
+    - [0xFF750, bin] # dl # flame torch base # object id 178
     - [0xFF7E0, vtx, data/inc/D_0400E780_FF7E0]
     - [0xFF860, vtx, data/inc/D_0400E800_FF860]
     - [0xFFA60, vtx, data/inc/D_0400EA00_FFA60]
@@ -2127,11 +2134,11 @@ segments:
     start: 0x12EDC0
     subsegments:
     - [0x12EDC0, bin] # sound file
-    - [0x133450, bin] # end of soundfile?
+    - [0x133450, bin] # alBnkfNew loads this
     - [0x1AE480, bin]
     - [0x1AE880, bin]
     - [0x1B6510, bin] # "B1" ...
-    - [0x1C7C80, bin] # end of soundfile
+    - [0x1C7C80, bin] # alBnkfNew loads this
     - [0x1E0EB0, bin]
     - [0x1E11C0, bin]
     - [0x3B8F60, bin]
@@ -2632,7 +2639,7 @@ segments:
     - [0x7B6FD8, bin] # D_803A5928_7B6FD8
     - [0x7B7150, bin] # D_803A5AA0_7B7150  ROM offsets of level displaylists
     - [0x7B7290, bin] # jump table?
-    - [0x7B7720, bin] # D_803A6070_7B7720
+    - [0x7B7720, data, overlay2_739290] # D_803A6070_7B7720
     - [0x7B7A60, bin]
     - [0x7B7B20, .data, overlay2_6ED230] # animal sound lookup table?
     - [0x7B7C80, bin] #
@@ -2643,7 +2650,8 @@ segments:
     - [0x7B9780, vtx, data/inc/D_803A80D0]
     - [0x7B9940] # end of vtx
     - [0x7B99F0, bin] # overlay2_725D10 data?
-    - [0x7B9BD8, bin] # 0x9C objects x 247  # rodata overlay2_72C680
+    - [0x7B9BD8, .data, data/objects_7B9BD8] # 0x9C objects x 247  # rodata overlay2_72C680
+    # - [0x7B9BD8, bin]
     - [0x7C325C, bin] # end of objects
     # - [0x7BC970, bin] # "all of the objects in the game (not just in the area you are in)" 0xB0 per item
     - [0x7C73D0, .data, overlay2_794EE0] # list of all behaviours
@@ -2687,6 +2695,7 @@ segments:
     - [0x7CE520, rodata, sssv/animals/lion]
     - [0x7CE530, rodata, overlay2_7041D0]
     - [0x7CE560, rodata, overlay2_7070A0]
+    - [0x7CE644, .rodata, overlay2_7070A0] # alignment ok?
     - [0x7CE650, rodata, sssv/animals/rabbit]
     - [0x7CE680, rodata, sssv/animals/frog]
     - [0x7CE690, rodata, overlay2_715820]
