--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -31,4 +31,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ghcr.io/mkst/${{ github.repository_owner }}/sssv:latest
+          tags: ghcr.io/${{ github.repository }}:latest
